기본정보 저장 기능 추가 및 일부 js 분리
- 기본정보 쿠키에 저장 기본 기능 추가
  (일단 값을 넣는 것에 집중했으나, 추후 사용되는 것을 고려하여 데이터 저장 방법 변경될 수 있음)
- index, setting html에서 js 파일 분리

--- a/index.html
+++ b/index.html
@@ -18,18 +18,7 @@
     <p>메뉴에서 페이지를 선택하세요.</p>
 </div>
 
-<script>
-    function loadPage(page) {
-        fetch(page)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("content").innerHTML = data;
-            })
-            .catch(error => {
-                console.error("페이지 로드 중 오류 발생:", error);
-            });
-    }
-</script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
