--- a/setting.html
+++ b/setting.html
@@ -19,29 +19,23 @@
   </tr>
   <tr>
     <td>17:30</td>
-    <td><input type="number" id="mon-17:30" min="0"></td>
-    <td><input type="number" id="tue-17:30" min="0"></td>
-    <td><input type="number" id="wed-17:30" min="0"></td>
-    <td><input type="number" id="thu-17:30" min="0"></td>
-    <td><input type="number" id="fri-17:30" min="0"></td>
+    <td><input type="number" id="mon1" min="0"></td>
+    <td><input type="number" id="tue1" min="0"></td>
+    <td><input type="number" id="wed1" min="0"></td>
+    <td><input type="number" id="thu1" min="0"></td>
+    <td><input type="number" id="fri1" min="0"></td>
   </tr>
   <tr>
     <td>19:30</td>
-    <td><input type="number" id="mon-19:30" min="0"></td>
-    <td><input type="number" id="tue-19:30" min="0"></td>
-    <td><input type="number" id="wed-19:30" min="0"></td>
-    <td><input type="number" id="thu-19:30" min="0"></td>
-    <td><input type="number" id="fri-19:30" min="0"></td>
+    <td><input type="number" id="mon2" min="0"></td>
+    <td><input type="number" id="tue2" min="0"></td>
+    <td><input type="number" id="wed2" min="0"></td>
+    <td><input type="number" id="thu2" min="0"></td>
+    <td><input type="number" id="fri2" min="0"></td>
   </tr>
 </table>
 
 <button onclick="saveData()">저장</button>
 
-<script>
-  function saveData() {
-    const days = ["mon", "tue", "wed", "thu", "fri"];
-    const times = ["17:30", "19:30"];
-  }
-</script>
 </body>
 </html>
