setting 화면 input > select 변경
- select가 편리할 것 같아 변경하며 option 세팅 function 추가
- setting.js 파일 분리

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <div class="menu">
     <button onclick="loadPage('setting.html')">기본 정보</button>
     <button onclick="loadPage('register.html')">신청자 정보</button>
@@ -19,6 +18,6 @@
 </div>
 
 <script src="js/script.js"></script>
-
+<script src="js/setting.js"></script>
 </body>
 </html>
