스타일 수정
- 테이블 스타일 설정
- 메뉴 스타일 설정
- 폰트 설정

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="menu">
-            <button onclick="loadPage('setting.html')">기본 정보</button>
-            <button onclick="loadPage('register.html')">신청자 정보</button>
-            <button onclick="loadPage('applicant_list.html')">신청자 리스트</button>
+            <button class="menuBtn selected" onclick="loadPage('setting.html')">기본 정보</button>
+            <button class="menuBtn unselected" onclick="loadPage('register.html')">신청자 정보</button>
+            <button class="menuBtn unselected" onclick="loadPage('applicant_list.html')">신청자 리스트</button>
         </div>
 
         <div id="content" class="content">
