--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>예약 시스템</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     </head>
     <body>
         <div class="menu">
@@ -12,6 +14,9 @@
             <button class="menuBtn unselected" onclick="loadPage('register.html', this)">신청자 정보</button>
             <button class="menuBtn unselected" onclick="loadPage('applicant_list.html', this)">신청자 리스트</button>
         </div>
+        <button class="initBtn" onClick="resetCookie()">
+            <i class="fas fa-redo"></i>
+        </button>
 
         <div id="content" class="content">
             <p>메뉴에서 페이지를 선택하세요.</p>
