잔여석이 없는 타임은 disabled 되도록 설정

--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-<!-- register.html -->
 <table>
     <tr>
         <th>월</th>
@@ -8,18 +7,18 @@
         <th>금</th>
     </tr>
     <tr>
-        <td data-time="MON1">17:30</td>
-        <td data-time="TUE1">17:30</td>
-        <td data-time="WED1">17:30</td>
-        <td data-time="THU1">17:30</td>
-        <td data-time="FRI1">17:30</td>
+        <td data-time="mon1">17:30</td>
+        <td data-time="tue1">17:30</td>
+        <td data-time="wed1">17:30</td>
+        <td data-time="thu1">17:30</td>
+        <td data-time="fri1">17:30</td>
     </tr>
     <tr>
-        <td data-time="MON2">19:30</td>
-        <td data-time="TUE2">19:30</td>
-        <td data-time="WED2">19:30</td>
-        <td data-time="THU2">19:30</td>
-        <td data-time="FRI2">19:30</td>
+        <td data-time="mon2">19:30</td>
+        <td data-time="tue2">19:30</td>
+        <td data-time="wed2">19:30</td>
+        <td data-time="thu2">19:30</td>
+        <td data-time="fri2">19:30</td>
     </tr>
 </table>
 
