신청자 정보 css 수정 및 등록 오류 해결

--- a/register.html
+++ b/register.html
@@ -23,4 +23,4 @@
 </table>
 
 <input type="text" id="nameInput" placeholder="이름을 입력하세요">
-<button onclick="register()">등록</button>
+<button class="regBtn" onclick="register()">등록</button>
