기본정보 스타일 수정

--- a/setting.html
+++ b/setting.html
@@ -1,5 +1,4 @@
 <!-- setting.html -->
-<h1>기본 정보</h1>
 <table>
   <tr>
     <th>시간/요일</th>
@@ -27,4 +26,4 @@
   </tr>
 </table>
 
-<button onclick="saveSettingData()">저장</button>
+<button class="regBtn" onclick="saveSettingData()">저장</button>
