js 모듈화로 변경

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <button class="initBtn" onClick="resetCookie()">
             <i class="fas fa-redo"></i>
         </button>
-
-        <script src="js/script.js"></script>
+        <script type="module" src="js/script.js"></script>
     </body>
 </html>
