데이터를 localStorage에 저장하도록 수정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>메뉴에서 페이지를 선택하세요.</p>
         </div>
 
-        <button class="initBtn" onClick="resetCookie()">
+        <button class="initBtn" onClick="resetLocalStorage()">
             <i class="fas fa-redo"></i>
         </button>
         <script type="module" src="js/script.js"></script>
