데이터 초기화 기능 완료
- 브라우저 reload로 화면 render 관련 오류 해결

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <p>메뉴에서 페이지를 선택하세요.</p>
         </div>
 
-<!--        <button class="initBtn" onClick="resetLocalStorage()">-->
-<!--            <i class="fas fa-redo"></i>-->
-<!--        </button>-->
+        <button class="initBtn" onClick="resetLocalStorage()">
+            <i class="fas fa-redo"></i>
+        </button>
         <script type="module" src="js/script.js"></script>
     </body>
 </html>
