테이블 css 수정
- 신청자리스트 테이블 잔여인원 0명 시 마감의 의미로 회색배경이 되도록 수정
- 휴대폰에서의 시안성을 위해 테이블 css 수정
- 입금대기 잔여시간 색상 변경

--- a/applicant_list.html
+++ b/applicant_list.html
@@ -1,4 +1,4 @@
-<table class="applicant-table" id="applicantTable">
+<table class="applicantTable" id="applicantTable">
   <thead>
   <tr>
     <th>요일</th>
