--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <div class="menu">
-            <button class="menuBtn selected" onclick="loadPage('setting.html', this)">기본 정보</button>
-            <button class="menuBtn unselected" onclick="loadPage('register.html', this)">신청자 정보</button>
-            <button class="menuBtn unselected" onclick="loadPage('applicant_list.html', this)">신청자 리스트</button>
+            <button class="menuBtn unselected" onclick="loadPage('register.html', this)">등록</button>
+            <button class="menuBtn unselected" onclick="loadPage('applicant_list.html', this)">관리</button>
+            <button class="menuBtn selected" onclick="loadPage('setting.html', this)">설정</button>
         </div>
 
         <div id="content" class="content">
