토요일 추가

--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
         <th>수</th>
         <th>목</th>
         <th>금</th>
+        <th>토</th>
     </tr>
     <tr>
         <td data-time="mon1">17:30</td>
@@ -12,6 +13,7 @@
         <td data-time="wed1">17:30</td>
         <td data-time="thu1">17:30</td>
         <td data-time="fri1">17:30</td>
+        <td data-time="sat1">17:30</td>
     </tr>
     <tr>
         <td data-time="mon2">19:30</td>
@@ -19,6 +21,7 @@
         <td data-time="wed2">19:30</td>
         <td data-time="thu2">19:30</td>
         <td data-time="fri2">19:30</td>
+        <td data-time="sat2">19:30</td>
     </tr>
 </table>
 
