--- a/setting.html
+++ b/setting.html
@@ -7,6 +7,7 @@
     <th>수</th>
     <th>목</th>
     <th>금</th>
+    <th>토</th>
   </tr>
   <tr>
     <td>17:30</td>
@@ -15,6 +16,7 @@
     <td><select id="wed1"></select></td>
     <td><select id="thu1"></select></td>
     <td><select id="fri1"></select></td>
+    <td><select id="sat1"></select></td>
   </tr>
   <tr>
     <td>19:30</td>
@@ -23,6 +25,7 @@
     <td><select id="wed2"></select></td>
     <td><select id="thu2"></select></td>
     <td><select id="fri2"></select></td>
+    <td><select id="sat2"></select></td>
   </tr>
 </table>
 
